# magnum-tempest-plugin

./: .coveragerc  .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.zuul.d/: base.yaml  jobs_2023_1.yaml  jobs_2023_2.yaml  jobs_2024_1.yaml  jobs_2024_2.yaml  jobs_2025_1.yaml  jobs_2025_2.yaml  jobs_master.yaml  jobs_zed.yaml  project.yaml
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst
magnum_tempest_plugin/: config.py  plugin.py
magnum_tempest_plugin/common/: base.py  client.py  config.py  datagen.py  manager.py  models.py  utils.py
magnum_tempest_plugin/common/templates/: cluster.py  cluster_template.py  cluster_template_admin.py
magnum_tempest_plugin/tests/api/: base.py
magnum_tempest_plugin/tests/api/v1/: test_bay.py  test_baymodel.py  test_baymodel_admin.py  test_cluster.py  test_cluster_template.py  test_cluster_template_admin.py  test_magnum_service.py
magnum_tempest_plugin/tests/api/v1/clients/: __init__.py  bay_client.py  baymodel_client.py  cert_client.py  cluster_client.py  cluster_template_client.py  magnum_service_client.py
magnum_tempest_plugin/tests/api/v1/models/: bay_model.py  baymodel_model.py  baymodelpatch_model.py  baypatch_model.py  cert_model.py  cluster_id_model.py  cluster_model.py  cluster_template_model.py  cluster_templatepatch_model.py  clusterpatch_model.py  magnum_service_model.py
magnum_tempest_plugin/tests/api/v1/rbac/: base.py  test_cluster.py  test_cluster_template.py  test_cluster_template_admin.py  test_magnum_service.py
magnum_tempest_plugin/tests/contrib/: copy_instance_logs.sh  copy_pod_logs.sh
releasenotes/notes/: drop-py-2-7-c997716906e17740.yaml  drop-python38-support-cd672361bccdd467.yaml  remove-csr_location-f2093640dfecaae8.yaml
releasenotes/source/: conf.py  index.rst
