[metadata]
name = magnum_tempest_plugin
summary = Tempest plugin for Magnum Project
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://opendev.org/openstack/magnum-tempest-plugin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    magnum_tempest_plugin

[entry_points]
tempest.test_plugins =
    magnum_tests = magnum_tempest_plugin.plugin:MagnumTempestPlugin
